# exploratory-analysis-ds-course-suzano

./: README.md  pyproject.toml
churn_analysis/: report.ipynb
