[tool.poetry]
name = "disciplina-analise-exploratoria"
version = "0.1.0"
description = ""
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "disciplina_analise_exploratoria"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
