[tool.poetry]
name = "exploratory-analysis-ds-course-suzano"
version = "0.1.0"
description = ""
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
